Bug 83487
Fixed too much styling being applied to the ZmListFlagsWrapper and ZmMsgListDate classes. (i.e. should only ever be background color, not padding, borders, etc.)
Eliminated the grey background to make it more like the Communities skin.
Additional skin fixes for minor things like Preferences backgrounds, New Button placement and No Results indicators.  Tons and tons of CSS tweaking.
Removed weird one-off styling of border in prefs page
Removed groupMembers class from a contact group element that wasn't "group members".

http://bugzilla.zimbra.com/show_bug.cgi?id=83487

Copied from Perforce
 Change: 497069

--- a/WebRoot/css/common.css
+++ b/WebRoot/css/common.css
@@ -512,18 +512,20 @@ TD.vSpace {
 #ENDIF
 /* list row styles (bgs & border) */
 
-.Row						{	@ListItemContainer-normal@			}
+.Row							{	@ListItemContainer-normal@			}
 
-.RowOdd						{	@ListItemContainer-alt@			}
+.RowOdd							{	@ListItemContainer-alt@			}
 
-.selected, 	/* TODO: used? */
+/* selected row styles */
+.selected,
 .Row-selected,
+.Row-selected-dragProxy,
+.Row-selected-disabled			{	@ListItemContainer-selected@		}
+
 .Row-selected .ZmListFlagsWrapper,
 .Row-selected .ZmMsgListDate,
-.Row-selected-dragProxy,
-.Row-selected-disabled,
 .Row-selected-disabled .ZmMsgListDate,
-.Row-selected-disabled .ZmListFlagsWrapper 	{	@ListItemContainer-selected@		}
+.Row-selected-disabled .ZmListFlagsWrapper 	{	background-color:@ListItemBgColor-selected@;	}
 
 /* .Row-matched, */
 .Row-matched-dragProxy 			{ 	@ListItemContainer-matched@		}
